# HeliosRT

./: .gitignore  CMakeLists.txt  README.md
docs/: theory.md
src/: main.cpp
src/acceleration/: AABB.h  BVHNode.h  aabb.cpp  bvhnode.cpp
src/camera/: Camera.h  camera.cpp
src/core/: Application.h  RenderSettings.h  RenderStats.h  Renderer.h  Tile.h  TileScheduler.h  application.cpp  renderer.cpp  tilescheduler.cpp
src/integrator/: Integrator.h  integrator.cpp
src/loaders/: OBJLoader.cpp  OBJLoader.h
src/material/: Checkerboard.h  Emissive.h  GGX.h  Glass.h  ImageTexture.h  Isotropic.h  Lambertian.h  Material.h  Metal.h  RoughConductor.h  RoughDielectric.h  SolidColor.h  Texture.h  checkerboard.cpp  emissive.cpp  glass.cpp  imagetexture.cpp  isotropic.cpp  lambertian.cpp  material.cpp  metal.cpp  roughconductor.cpp  roughdielectric.cpp  solidcolor.cpp
src/math/: Matrix.h  Random.h  Ray.h  Transform.h  Vector3.h  matrix.cpp  random.cpp  ray.cpp  transform.cpp  vector3.cpp
src/primitives/: ConstantMedium.h  Mesh.h  Sphere.h  Triangle.h  constantmedium.cpp  mesh.cpp  sphere.cpp  triangle.cpp
src/rendering/: AccumulationBuffer.h  Denoiser.h  FrameBuffer.h  Presenter.h  accumulationbuffer.cpp  denoiser.cpp  framebuffer.cpp  presenter.cpp
src/scene/: Environment.h  HitRecord.h  Hittable.h  Light.h  Scene.h  SphereLight.h  TransformNode.h  environment.cpp  scene.cpp  spherelight.cpp  transformnode.cpp
